--- a/Task2/Jenkinsfile
+++ b/Task2/Jenkinsfile
@@ -1,1 +1,12 @@
-pipeline 
+pipeline {
+    agent any
+    stages {
+        stage("Run Script"){
+            steps {
+                dir("Task2") {
+                    sh "sh deploy.sh"
+                }
+            }
+        }
+    }
+}
