--- a/Task2/Jenkinsfile
+++ b/Task2/Jenkinsfile
@@ -1,15 +1,37 @@
 pipeline {
         environment {
             MYSQL_ROOT_PASSWORD = credentials("MYSQL_ROOT_PASSWORD")
+            DOCKERHUB_CREDENTIALS_USR = credentials("DOCKERHUB_PASSWORD")
         }
     agent any
     stages {
-        stage("Run Script"){
+        stage("Build MySQL") {
             steps {
                 dir("Task2") {
-                    sh "sh deploy.sh"
+                    sh "docker build -t ${DOCKERHUB_CREDENTIALS_USR}/trio-task-mysql:5.7 db"
                 }
             }
         }
+        stage("Build flask app") {
+                steps {
+                     dir("Task2") {
+                         sh "docker build -t ${DOCKERHUB_CREDENTIALS_USR}/trio-task-flask-app:latest flask-app"
+                     }
+                }
+        }
+        stage("Push Images"){
+            steps {
+                sh "docker login -u ${DOCKERHUB_CREDENTIALS_USR} -p ${DOCKERHUB_CREDENTIALS_PSW}"
+                sh "docker push ${DOCKERHUB_CREDENTIALS_USR}/trio-task-flask-app:latest"
+                sh "docker push ${DOCKERHUB_CREDENTIALS_USR}/trio-task-mysql:5.7"
+                sh "docker logout"
+            }
+        }
+   }
+   post {
+           always {
+                   sh "docker rm -f \$(docker ps -aq) || sleep 1"
+                   sh "docker system prune"
+           }
     }
 }
